--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,33 +3,47 @@
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-
+  <div class="form-inputs user-edit-form-inputs">
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
 
-    <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
+    <div class="user-personal-info">
+      <%= f.input :first_name,
+                  hint: "This will be publicly visible." %>
+      <%= f.input :last_name,
+                  hint: "Your last name will not be visible to other users." %>
+      <%= f.input :postal_code,
+                  hint: "This is the postal code your home page will default to." %>
+      <%= f.input :region %>
+      <%= f.input :birth_date, 
+                  label: "Birthday",
+                  hint: "Your birth date will not be visible to other users." %>
+      <%= f.input :phone_number,
+                  hint: "Your phone number will not be visible to other users." %>
+    </div>
+
+    <div class="user-password-change">
+      <%= f.input :password,
+                hint: "Leave it blank if you don't want to change your password!",
                 required: false,
                 input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
+      <%= f.input :password_confirmation,
                 required: false,
                 input_html: { autocomplete: "new-password" } %>
-    <%= f.input :current_password,
+    </div>
+
+    <div class="password-confirmation">
+      <%= f.input :current_password,
                 hint: "we need your current password to confirm your changes",
                 required: true,
                 input_html: { autocomplete: "current-password" } %>
+    </div>
   </div>
 
   <div class="form-actions">
     <%= f.button :submit, "Update" %>
   </div>
 <% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
