--- a/app/views/requirements/_form.html.erb
+++ b/app/views/requirements/_form.html.erb
@@ -6,7 +6,6 @@
     <%= f.input :title, placeholder: "Keep it short and sweet" %>
     <%= f.input :description, placeholder: "An in-depth description goes here." %>
     <%= f.input :current_status, placeholder: "A short description of the current status." %>
-    <%= f.input :address, placeholder: "Leave this blank if there isn't a specific address." %>
 
     <% if @date %>
       <%= f.input :target_completion_date, :selected => @date, start_year: Date.today.year %>
@@ -33,7 +32,7 @@
         <%= f.input :estimated_work, placeholder: "Estimate the number of hours. Don't worry, you can edit this later!" %>
       </div>
     <% else %>
-      <%= f.hidden_field :planned, :value => true %>
+      <%= f.hidden_field :defined, :value => true %>
     <% end %>
     <% if params[:requirement] %>
     <%= f.hidden_field :problem_id, :value => params[:requirement][:problem_id] %>
