start changing our color scheme, make flash messages disappear after a couple seconds

--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -1,6 +1,6 @@
 $primary: #3088CC;
-$secondary: #47624F;
-$secondary-hover: #57705F;
+$secondary: #003366;
+$secondary-hover: #3399CC;
 $info: #70D8C8;
 $success: #6AD173;
 $danger: #CE3333;
