--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -4,11 +4,16 @@
   min-height: 10vh;
   font-family: 'Rubik', Verdana, Arial, Sans-Serif;
   text-transform: uppercase;
+  background-color: #3399CC;
 }
 
 .navbar-brand {
   font-size: 2.2em;
   margin-right: auto;
+}
+
+.bg-dark {
+  background-color: #003366 !important;
 }
 
 .navbar-beta-tag {
