--- a/app/assets/stylesheets/registrations.scss
+++ b/app/assets/stylesheets/registrations.scss
@@ -12,3 +12,10 @@
   padding-left: 10vw;
   padding-right: 10vw;
 }
+
+
+.edit-user-title {
+  padding-left: 3vw;
+  padding-top: 3vh;
+  padding-bottom: 3vh;
+}
