--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -74,8 +74,6 @@
   position: absolute;
   z-index: 999;
   background: white;
-  height: 8vh;
-  width: 10vw;
   padding: 10px;
   margin: 10px;
   opacity: .9;
@@ -91,7 +89,6 @@
 .filter.floater {
   left: 30%;
   cursor: pointer;
-  transition: all .3s linear;
 
   @include respond-to(handhelds) {
     left: 0;
@@ -99,18 +96,17 @@
 }
 
 .filter.show-filter {
-  height: 20vh;
-  width: 20vw;
+  min-height: 20vh;
 }
 
 .filter-container {
-  display: none;
   opacity: 0;
+  display: none;
   transition: all .3s linear;
 }
 .filter-container.show {
-  display: block;
   opacity: 1;
+  display: block;
 }
 
 .current-zip.floater {
