--- a/app/views/pages/_problem_row.html.erb
+++ b/app/views/pages/_problem_row.html.erb
@@ -2,7 +2,7 @@
   <div>
     <a href="/problems/<%= problem.id %>">
       <h5><%= problem.display_title %></h5>
-      <p><%= problem.display_description %></p>
+      <p><strong>Description: </strong><%= problem.display_description %></p>
       <p><strong>Due: </strong><%= problem.target_completion_date %></p>
       <p><strong>Created by: </strong><%= User.find(problem.user_id).username %></p>
     </a>
