--- a/app/views/problems/show.html.erb
+++ b/app/views/problems/show.html.erb
@@ -1,7 +1,7 @@
 <div class="problem-header">
-  <div class="problem-desc">
+  <div class="problem-info-summary">
     <h1 class="problem-title"> <%= @problem.title %> </h1>
-    <p><%= @problem.description %></p>
+    
 
     <% if !@role && current_user %>
       <%= link_to 'Follow Problem', problems_follow_path(problem_id: @problem.id), class: "btn btn-outline-primary" %>
@@ -33,19 +33,16 @@
       <span class="follower-count">Category <span class="follower-count-span black"><%= @problem.category_title %></span></span>
       <span class="follower-count">Volunteers <span class="follower-count-span info"><%= @problem.volunteer_count %> / <%= @problem.volunteers_required %></span></span>
     </div>
+    <p><%= @problem.description %></p>
   </div>
 
 </div>
 
 <div class="tab">
-
-  <button class="tablinks" onclick="openTab(event, 'problem-requirements-tab')" id="defaultOpen">Requirements and Progress</button>
-  <button class="tablinks" onclick="openTab(event, 'problem-info-tab')">Posts and Discussion</button>
-  <% if @is_admin %>
-    <!-- <button class="tablinks" onclick="openTab(event, 'problem-people-tab')">Manage Volunteers and Followers</button> -->
-  <% elsif @role %>
-    <!-- <button class="tablinks" onclick="openTab(event, 'problem-people-tab')">Volunteers and Followers</button> -->
-  <% end %>
+  <div class="problem-tab-links">
+    <button class="tablinks hp" onclick="openTab(event, 'problem-requirements-tab')" id="defaultOpen">Requirements and Progress</button>
+    <button class="tablinks hp" onclick="openTab(event, 'problem-info-tab')">Posts and Discussion</button>
+  </div>
 </div>
 
 <!-- Tab content -->
@@ -53,11 +50,6 @@
   <div class="posts-container">
     <div class="tab-header d-flex align-items-center">
       <h2 class="tab-heading"> Posts </h2>
-      <% if current_user && @role %>
-        <div class="add-requirement-button">
-          <%= link_to 'Add A Post', new_post_path(:problem => {:problem_id => @problem.id}), class: "btn btn-success btn-lg", data: { modal: true } %>
-        </div>
-      <% end %>
     </div>
     <div class="post-list">
       <% @problem.posts.each do |post| %>
@@ -66,8 +58,13 @@
           <a href="/posts/<%= post.id %>" class="post-link">
             <p class="post-author"><%= post_user.username %><span> on <%= post.created_at.strftime('%m/%d/%Y') %></span></p>
             <p class="post-title"><%= post.title %></p>
-            <p class="post-excerpt"><strong>Excerpt: </strong></p>
+            <p class="post-excerpt"><strong>Excerpt: <%= post.display_content %></strong></p>
           </a>
+        </div>
+      <% end %>
+      <% if current_user && @role %>
+        <div class="add-post-button">
+          <%= link_to 'Add A Post', new_post_path(:problem => {:problem_id => @problem.id}), class: "btn btn-success btn-lg", data: { modal: true } %>
         </div>
       <% end %>
     </div>
@@ -78,34 +75,16 @@
 <div id="problem-requirements-tab" class="tabcontent">
   <div class="d-flex align-items-center">
     <h2 class="tab-heading">Requirements</h2>
-    <% if @is_mod %>
-      <div class="add-requirement-button">
-        <%= link_to 'Add a new requirement', new_requirement_path(:requirement => {:problem_id => @problem.id, :problem_planned => @problem.planned, :target_date => @problem.target_completion_date}), class: 'btn btn-success btn-lg', data: { modal: true } %>
-      </div>
-    <% end %>
+
   </div>
 
-  <% @problem.requirements.each do |requirement| %>
-    <div class="requirement-container">
-      <div class="requirement-title">
-        <Strong>Title:</Strong> <%= requirement.title %><br>
-      </div>
-      <div class="requirement-status">
-        <Strong>Current Status:</Strong> <%= requirement.current_status %><br>
-      </div>
-      <div class="requirement-info">
-        <Strong>Complete:</Strong> <%= requirement.complete %> <br>
-        <Strong>Current/Needed Volunteers:</Strong> <%= requirement.volunteer_count %>/<%= requirement.volunteers_required %> <br>
-      </div>
-      <div class="requirement-button-group">
-        <div class="btn-group" role="group" aria-label="Admin Controls">
-          <%= link_to 'Show', requirement %>
-          <% if @is_mod %>
-          <%= link_to 'Edit', edit_requirement_path(requirement), class: 'btn btn-outline-info my-2 my-sm-0', data: { modal: true } %>
-          <%= link_to 'Delete', requirement, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-danger my-2 my-sm-0' %>
-          <% end %>
-        </div>
-      </div>
-    </div>
+  <% @requirements.each do |requirement| %>
+    <%= render 'requirement_row', requirement: requirement %>
   <%end%>
+
+  <% if @is_mod %>
+    <div class="add-requirement-button">
+      <%= link_to 'Add a new requirement', new_requirement_path(:requirement => {:problem_id => @problem.id, :problem_planned => @problem.planned, :target_date => @problem.target_completion_date}), class: 'btn btn-success btn-lg', data: { modal: true } %>
+    </div>
+  <% end %>
 </div>
