--- a/app/views/requirements/_form.html.erb
+++ b/app/views/requirements/_form.html.erb
@@ -25,7 +25,7 @@
       <%= f.select :subcategory, @sub_categories[0].map.with_index {|sub, index| [sub[:title], index]}, {}, class: "form-control" %>
     </div>
     <%= f.input :volunteers_required, placeholder: "How many people do you need?" %>
-
+    <%= f.select :priority, [1,2,3,4,5,6,7,8,9,10], label: "Priority" %>
     <% if !@planned %>
       <div class="planned-selection">
         <%= f.input :defined, label: "This is everything I need!" %>
