--- a/app/views/requirements/edit.html.erb
+++ b/app/views/requirements/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing Requirement</h1>
+<h4 class="modal-title" id="mainModalLabel">Editing Requirement</h4>
 
 <%= render 'form', requirement: @requirement %>
-
-<%= link_to 'Show', @requirement %> |
-<%= link_to 'Back', :back %>
