--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -1,6 +1,6 @@
 $primary: #3088CC;
 $secondary: #003366;
-$secondary-hover: #3399CC;
+$secondary-hover: #99ccff;
 $info: #70D8C8;
 $success: #6AD173;
 $danger: #CE3333;
