--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -136,10 +136,10 @@
   }
 
   &:hover {
-    background-color: $secondary-hover;
-
+    background-color: #99ccff;
+    
     & a {
-      color: #fff;
+      color: black;
       text-decoration: none;
     }
 
@@ -147,6 +147,18 @@
       transform: scale(.98);
     }
   }
+}
+
+.problem-title {
+  font-size: 1.5em;
+}
+
+.problem-desc {
+  font-style: italic;
+}
+
+.problem-date {
+  text-align: center;
 }
 
 // ========DONATE PAGE STYLING========
