--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,23 +1,34 @@
 <p id="notice"><%= notice %></p>
 
-<h2>Discussion topic: "<%= @post.title %>"</h2>
-<br>
-<p> <%= @post.content %> </p>
-<br>
-<p>Discussion started by: <%= User.find(@post.user_id).username %> at <%= @post.created_at %></p>
+<div class="original-post">
+  <div class="original-post-title">
+    <h2>Discussion topic: "<%= @post.title %>"</h2>
+  </div>
+  <div class="original-post-content">
+    <p> <%= @post.content %> </p>
+  </div>
+  <div class="original-post-meta">
+    <p>Discussion started by: <%= User.find(@post.user_id).username %> at <%= @post.created_at %></p>
+  </div>
+</div>
 
-<br>
+
 <% if @post.comments.size == 0 %>
-<h4>There are no comments on this post. Add a comment?</h4>
+  <h4>There are no comments on this post. Add a comment?</h4>
 <% else %>
-<h4>Comments on this post:</h4>
-  <% i = 1 %>
-  <% @post.comments.each do |comment| %>
-  <h6>Comment number: <%= i %></h6>
-  <p>Content: <%= comment.content %></p>
-  <p>Left by: <%= comment.user.username %>  |  At: <%= comment.created_at %></p>
-    
-  <% end %>
+  <div class="comments-container">
+    <% @post.comments.each do |comment| %>
+      <div class="comment-card">
+        <div class="comment-content">
+          <p><%= comment.content %></p>
+        </div>
+        <div class="comment-divider"><p></p></div>
+        <div class="comment-meta">
+          <p>Left by: <%= comment.user.username %>  |  At: <%= comment.created_at %></p>
+        </div>
+      </div>
+    <% end %>
+  </div>
 <% end %>
 
 <h4><%= link_to 'Add a comment', new_comment_path(:post => {:post_id => @post.id}) %></h4>
