--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -3,13 +3,24 @@
 .navbar {
   min-height: 10vh;
   font-family: 'Rubik', Verdana, Arial, Sans-Serif;
-  text-transform: uppercase;
+  
   background-color: #3399CC;
 }
 
 .navbar-brand {
   font-size: 2.2em;
   margin-right: auto;
+}
+
+.navbar-logo {
+  width: auto;
+  height: 8vh;
+  min-height: 40px;
+}
+
+.nav-link {
+  color: #006699 !important;
+  text-transform: uppercase;
 }
 
 .bg-dark {
