--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,14 +1,13 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Just Be Human<sup class="navbar-beta-tag">beta</sup></a>
+  <a class="navbar-brand" href="/">
+    <%= image_tag("colorized-logo.png", class: "navbar-logo") %>
+  </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="desktop-nav" >
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-      </li>
       <% if current_user %>
         <li class="nav-item">
           <%= link_to 'New Problem', new_problem_path, class: 'nav-link' %>
@@ -20,7 +19,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/users/edit">Edit</a>
             <div class="dropdown-divider"></div>
-            <div class="dropdown-item"><%= link_to 'Sign Out', '/users/sign_out', method: :delete %></div>
+            <a class="dropdown-item" href="/users/sign_out" data-method="delete">Sign Out</a>
             <!-- <a class="dropdown-item" href="/users/sign_out">Sign Out</a> -->
           </div>
         </li>
