--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -17,7 +17,7 @@
             User Actions
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/users/edit">Edit</a>
+            <a class="dropdown-item" href="/users/edit">Settings</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/users/sign_out" data-method="delete">Sign Out</a>
             <!-- <a class="dropdown-item" href="/users/sign_out">Sign Out</a> -->
