add Personal Information (PI) note to registrations#edit page and clean up footer

--- a/app/assets/stylesheets/registrations.scss
+++ b/app/assets/stylesheets/registrations.scss
@@ -20,7 +20,13 @@
   padding-bottom: 3vh;
 }
 
-
+.user-pi-note {
+  font-size: .9rem;
+  padding-top: 3vh;
+  padding-left: 10vw;
+  padding-right: 10vw;
+  padding-bottom: 3vh;
+}
 
 
 .requirement-row {
