--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -23,6 +23,9 @@
                   hint: "Your birth date will not be visible to other users." %>
       <%= f.input :phone_number,
                   hint: "Your phone number will not be visible to other users." %>
+      <div class="user-pi-note">
+        *A quick note about your email, last name, birth date, and phone number- we are building out the ability to allow volunteers over the age of 16 to securely share their contact information with people volunteering for the same projects. All volunteers will have complete control and awareness of who has access to their contact information at all times.
+      </div>
     </div>
 
     <div class="user-password-change">
