doing a lot of cleanup to make things look a little better

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -1,7 +1,7 @@
 @import "/*";
 @import "bootstrap";
 @import "tether";
-@import url('https://fonts.googleapis.com/css?family=Roboto|Rubik&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Fjalla+One&display=swap');
 $enable-responsive-font-sizes: true;
 
 //*= require introjs
@@ -12,7 +12,7 @@ html, body {
 }
 
 h1, h2, h3, h4, h5 {
-  font-family: 'Rubik', Arial, sans-serif;
+  font-family: 'Fjalla One', Arial, sans-serif;
   letter-spacing: 2px;
 }
 
@@ -21,7 +21,7 @@ h1, h2 {
 }
 
 p, a, span {
-  font-family: 'Roboto', Arial, sans-serif;
+  font-family: 'Fjalla One', Arial, sans-serif;
 }
 
 .main {
@@ -31,6 +31,8 @@ p, a, span {
 .wrapper {
   min-height: 75vh;
 }
+
+
 
 #map {
   height: 100%;
