--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,7 +25,7 @@
       </div>
       <div class="form-check">
         <input type="checkbox" class="form-check-input" id="problem_defined" onchange="handleCheckbox(event)" aria-describedby="problem_defined">
-        <label for="problem_defined">Fully Defined</label>
+        <label for="problem_defined">Defined</label>
       </div>
       <!-- need to have grab params and send them to home page to filter the problems -->
     </div>
@@ -33,8 +33,8 @@
   <aside class="home-page-aside">
     <div class="homepage-header">
       <div class="tab hp">
-        <button class="tablinks hp" onclick="openTab(event, 'probs-near-me')" id="defaultOpen">Problems Near Me</button>
-        <button class="tablinks hp" onclick="openTab(event, 'my-probs')">My Problems</button>
+        <button class="tablinks hp" onclick="openTab(event, 'probs-near-me')" id="defaultOpen">Open</button>
+        <button class="tablinks hp" onclick="openTab(event, 'my-probs')">Active</button>
       </div>
     </div>
     <div id="probs-near-me" class="tabcontent hp">
