--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -124,8 +124,6 @@
 
 .problem-row {
   border-bottom: 2px solid;
-  margin-bottom: 2px;
-  padding: 1vh 1vw;
   background-color: $darkblue;
   transition: all .1s linear;
 
@@ -152,6 +150,10 @@
   }
 }
 
+#map {
+  border-bottom: 3px solid white;
+}
+
 .problem-title {
   font-size: 1.8rem;
   text-shadow: 2px 1px black;
@@ -164,13 +166,24 @@
 }
 
 .problem-row-data {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
+  width: auto;
 }
 
-.problem-volunteers-needed {
+.problem-meta-volunteers {
   float: right;
+  font-size: 4rem;
+  padding-right: 1vw;
+}
+
+
+.problem-volunteers-needed {
   color: $limegreen;
-  font-size: 1.1rem;
+}
+
+.problem-volunteers-not-needed {
+  color: black;
+  text-shadow: 1px 1px $lightblue;
 }
 
 .problem-defined-wrapper {
