--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -155,6 +155,7 @@
 }
 
 .problem-title {
+  padding-top: 1vh;
   font-size: 1.8rem;
   text-shadow: 2px 1px black;
 }
@@ -176,14 +177,19 @@
   padding-right: 1vw;
 }
 
+.problem-meta {
+  width: 80%;
+  border-bottom: 1px solid white;
+  border-top: 1px solid white;
+}
 
 .problem-volunteers-needed {
   color: $limegreen;
 }
 
 .problem-volunteers-not-needed {
-  color: black;
-  text-shadow: 1px 1px $lightblue;
+  color: grey;
+  text-shadow: 1px 1px black;
 }
 
 .problem-defined-wrapper {
