a couple of little changes

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -154,6 +154,11 @@
   border-bottom: 3px solid white;
 }
 
+.no-open-problems {
+  padding-top: 3vh;
+  padding-left: 1vw;
+}
+
 .problem-title {
   padding-top: 1vh;
   font-size: 1.8rem;
