--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -12,3 +12,10 @@ $limegreen: #99cc66;
 $darkblue: #006699;
 $lightblue: #99ccff;
 $lightpink: #E9B1E0;
+
+
+
+
+
+$lightgrey: #CBCCCE;
+$midgrey: #A2A3A4;
