--- a/app/views/problems/_form.html.erb
+++ b/app/views/problems/_form.html.erb
@@ -9,7 +9,7 @@
   <div class="form-inputs">
     <h5 class="title-subheader">What are the basics?</h5>
     <div class="title-selection">
-      <%= f.input :title, placeholder: "Keep your title short and simple!" %>
+      <%= f.input :title, placeholder: "60-character limit" %>
       <%= f.input :description, placeholder: "A good description will go a long way." %>
       <div class="form-group">
         <%= f.label :category %>
