--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -51,8 +51,7 @@
   grid-column: 1;
   height: 100%;
   overflow-y: scroll;
-  background-color: $darkblue;
-  color: #fff;
+  //color: #fff;
 
   & h3 {
     margin: 0;
@@ -65,10 +64,9 @@
 }
 
 .homepage-header {
-  border-bottom: 1px solid transparent;
-  border-image: linear-gradient(to bottom right, #b827fc 0%, #2c90fc 25%, #b8fd33 50%, #fec837 75%, #fd1892 100%);
-  border-image-slice: 1;
-  padding-bottom: 2px;
+  margin-top: 1vh;
+  border-bottom: 1px solid $lightgrey;
+  padding-bottom: 1vh;
   margin-bottom: 2px;
   font-weight: 700;
 }
@@ -123,13 +121,13 @@
 }
 
 .problem-row {
-  border-bottom: 2px solid;
-  background-color: $darkblue;
+  border-bottom: 2px solid $lightgrey;
+
   transition: all .1s linear;
 
-  & a {
-    color: #fff;
-  }
+//  & a {
+//    color: #fff;
+//  }
 
   & div {
     transform: scale(.95);
@@ -137,10 +135,8 @@
   }
 
   &:hover {
-    background-color: $lightblue;
     
     & a {
-      color: black;
       text-decoration: none;
     }
 
@@ -151,7 +147,11 @@
 }
 
 #map {
-  border-bottom: 3px solid white;
+  border: 1rem solid white;
+}
+
+.map-div {
+  padding: 1rem;
 }
 
 .no-open-problems {
@@ -162,18 +162,18 @@
 .problem-title {
   padding-top: 1vh;
   font-size: 1.8rem;
-  text-shadow: 2px 1px black;
+  color: black;
 }
 
 .problem-row-definition {
   padding-top: 1vh;
   text-align: center; 
-  text-shadow: 2px 1px black;
 }
 
 .problem-row-data {
   font-size: 1.4rem;
   width: auto;
+  color: $midgrey;
 }
 
 .volunteers-needed {
